--- a/DesignerRHN/DesignerRHN-war/web/emplvigencianormalaboral.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/emplvigencianormalaboral.xhtml
@@ -259,7 +259,7 @@
 
                         <p:panel id="nuevaaEvalEmpresa" style="border: none;">
 
-                            <strong><h:outputText value="Fecha: "  style=" position: absolute; top: 55px;" /></strong>
+                            <strong><h:outputText value="*Fecha: "  style=" position: absolute; top: 55px;" /></strong>
                             <div  id="nuevaFechaa" style="width: 135px; position: absolute; top: 50px; left: 135px;">
                                 <lnk:calendar id="nuevaFecha" value="#{controlBetaEmplVigenciaNormaLaboral.nuevoEmplVigenciaNormaLaboral.fechavigencia}" height="12" width="60" >
                                     <p:ajax event="dateSelect" update="nuevaFecha"/>
@@ -268,7 +268,7 @@
                             </div>
                             <p:watermark for="nuevaFecha" value="Fecha" />
 
-                            <strong><h:outputText value="Norma laboral: " style=" position: absolute; top: 85px" /></strong>
+                            <strong><h:outputText value="*Norma laboral: " style=" position: absolute; top: 85px" /></strong>
                             <p:inputText id="nuevoNombreSucursal" value="#{controlBetaEmplVigenciaNormaLaboral.nuevoEmplVigenciaNormaLaboral.normalaboral.nombre}" style=" width: 127px; position: absolute; left: 135px; top: 80px; text-transform: uppercase" onclick="select();">
                                 <p:ajax event="click" listener="#{controlBetaEmplVigenciaNormaLaboral.valoresBackupAutocompletar(1)}" />
                                 <p:ajax event="change" listener="#{controlBetaEmplVigenciaNormaLaboral.autocompletarNuevo('NORMASLABORALES',controlBetaEmplVigenciaNormaLaboral.nuevoEmplVigenciaNormaLaboral.normalaboral.nombre, 1)}" />
